# bsd-os

./: LICENSE  Makefile
core_contrib/: Makefile  Makefile.inc  dir
core_contrib/LPRng/: Makefile  Makefile.inc  printcap  printcap.local
core_contrib/am-utils/: .cvsignore  BSDI_CONTRIB  ChangeLog  amd.conf-sample  configure  makefile
core_contrib/apache/: BSDI_CONTRIB  Makefile.inc  Makefile.tmpl  config.layout  makefile
core_contrib/apm/: AUTHOR  Makefile  apm.8  apm.c
core_contrib/apmd/: Makefile  apmd.8  apmd.c  resume  suspend
core_contrib/bash/: .cvsignore  BSDI_CONTRIB  makefile
core_contrib/bind/: .cvsignore  BSDI_CONTRIB  COPYRIGHT  Makefile.in  acconfig.h  config.h.in  config.h.win32  configure  configure.in  isc-config.sh.in  libtool.m4  makefile  mkinstalldirs  version
core_contrib/binutils/: BSDI_CONTRIB  config.guess  configure  makefile  md5.sum
core_contrib/bison/: Makefile
core_contrib/cvs/: BSDI_CONTRIB  Makefile
core_contrib/cx/: Makefile  Makefile.cx
core_contrib/daemon/: BSDI_CONTRIB  Makefile  daemon.8  daemon.c
core_contrib/dhcp/: .cvsignore  BSDI_CONTRIB  Makefile.conf  configure  makefile  site.conf
core_contrib/file/: .cvsignore  BSDI_CONTRIB  Localstuff  config.h  makefile  mkinstalldirs
core_contrib/gcc/: .cvsignore  config.guess  configure  configure.in  libtool.m4  ltcf-c.sh  ltcf-cxx.sh  ltcf-gcj.sh  ltconfig  makefile
core_contrib/gdb/: BSDI_CONTRIB  config.guess  configure  djunpack.bat  makefile
core_contrib/gettext/: BSDI_CONTRIB  Makefile
core_contrib/gm4/: BSDI_CONTRIB  Makefile
core_contrib/gmake/: .cvsignore  BSDI_CONTRIB  configure.in  makefile
core_contrib/gzip/: BSDI_CONTRIB  MAP  Makefile  bits.c  crypt.c  deflate.c  gzexe.in  gzip.c  inflate.c  lzw.c  match.S  revision.h  tailor.h  trees.c  unlzh.c  unlzw.c  unpack.c  unzip.c  util.c  zip.c
core_contrib/kame/: Makefile
core_contrib/ld.so-1.9.5/: BSDI_CONTRIB  Makefile
core_contrib/less/: .cvsignore  BSDI_CONTRIB  lessecho.c  makefile
core_contrib/libtool/: BSDI_CONTRIB  Makefile
core_contrib/linux/: Makefile  lap.html
core_contrib/md5.shs/: .cvsignore  BSDI_CONTRIB  Makefile  README  README.md5  README.sha1  makefile  md5.1  md5drvr.c  md5dual.c  md5io.c  mega.c  shs.1  shs.c  shs.h  shs1.c  shs1.h  shs1drvr.c  shs1dual.c  shs1io.c  shsdrvr.c  shsdual.c  shsio.c
core_contrib/mod_ssl/: BSDI_CONTRIB  configure  makefile
core_contrib/mrouted/: .cvsignore  BSDI_CONTRIB  Makefile  README-3.8.mrouted  callout.c  cfparse.y  config.c  defs.h  dvmrp.h  igmp.c  inet.c  kern.c  main.c  makefile  mapper.c  mrinfo.c  mrouted.8  mrouted.conf  mstat.8  mtrace.8  mtrace.c  pathnames.h  prune.c  prune.h  route.c  route.h  vif.c  vif.h
core_contrib/ncurses/: .cvsignore  BSDI_CONTRIB  Makefile.in  Makefile.inc  libncurses.except  makefile
core_contrib/nettest/: BSDI_CONTRIB  Makefile  Makefile.inc
core_contrib/ntp/: .cvsignore  BSDI_CONTRIB  Makefile.in  makefile  ntp.8
core_contrib/nvi/: .cvsignore  BSDI_CONTRIB  makefile
core_contrib/openssh/: BSDI_CONTRIB  README.privsep  WARNING.RNG  channels.c  (+5 more)
core_contrib/qpopper/: BSDI_CONTRIB  INSTALL  Makefile.in  README  conf.h  config.h.in  configure  configure.in  makefile  misc.h  update-copyright
core_contrib/qpopper/common/: Makefile.in  check_group.c  flock.c  flock.h  logit.c  logit.h  maillock.c  maillock.h  sieve_lock.c  sieve_lock.h  snprintf.c  snprintf.h  string_util.c  string_util.h  utils.c  utils.h
core_contrib/qpopper/doc/: Changes  LMOS-FAQ.html  README.Berkeley  Release.Notes  rfc2449.txt
core_contrib/qpopper/doc/guide/: Qpopper.fm  Qpopper_cover.fm
core_contrib/qpopper/man/: .cvsignore  popauth.8  poppassd.8  popper.8
core_contrib/qpopper/mmangle/: Makefile.in  README  charmangle.c  charmangle.h  enriched.c  enriched.h  etags.c  etags.gperf  lineend.c  lineend.h  mangle.c  mangle.h  mime.c  mime.h  mkfile  striphtml.c  striphtml.h  testhtml.c  testj.c  testjig.c
core_contrib/qpopper/mmangle/test/: 1847  1847++.out  2047  2047-real  2047-real.out  822  822long  Makefile  apple-single.out  bad-mime.out  e.out.html  enriched-excerpt.out  etags  eudora1.out  html.out  html3  html3.out  html4.out  html5  html5.out  html6.out  html7.out  mult-alt  mult-alt-html  mult-alt.out  mult-alt2  ns-html  ns-html.out  ns-html2  ns-html2.out  ns-html3.out  plain  plain.out  qp.out  t  text-lines
core_contrib/qpopper/password/: Makefile.in  Makefile.old  README  auth_user.c  poppassd.c
core_contrib/qpopper/popper/: .cvsignore  Makefile.in  banner.h  base64.c  drac.c  genpath.c  genpath.h  get_sub_opt.c  get_sub_opt.h  hmac-md5.h  hmac.c  main.c  md5.c  md5.h  mktemp.c  msg_ptr.c  pop_apop.c  pop_auth.c  pop_bull.c  pop_cache.c  pop_config.c  pop_dele.c  pop_dropcopy.c  pop_extend.c  pop_get_command.c  pop_get_subcommand.c  pop_init.c  pop_last.c  pop_list.c  pop_log.c  pop_lower.c  pop_msg.c  pop_parse.c  pop_pass.c  pop_pope.c  pop_quit.c  pop_rpop.c  pop_rset.c  pop_send.c  pop_stat.c  (+19 more)
core_contrib/qpopper/samples/: qpopper.config  qpopper.xinetd
core_contrib/qpopper/test/: new
diag/: Makefile  Makefile.inc
domestic/: Makefile
etc/: MAKEDEV.local  Makefile  aliases  changelist  chap_md5_secrets  crontab  daily  daily.local  gettytab  group  inetd.conf  inetd.conf.nowrappers  irs.conf  login.conf  man.conf  master.passwd  mime.types  monthly  motd  mtools.conf  netstart.proto  protocols  rc  rc.local  remote  rpc  security  services  syslog.conf  weekly  weekly.local
games/: Makefile  Makefile.inc
include/: Makefile  a.out.h  assert.h  bsd_auth.h  cdrom.h  ctype.h  dirent.h  dlfcn.h  fts.h  grp.h  ieeefp.h  iso646.h  kvm.h  limits.h  login_cap.h  malloc.h  nlist.h  pthread.h  pthread_var.h  pwd.h  sched.h  semaphore.h  setjmp.h  signal.h  stdbool.h  stddef.h  stdio.h  stdlib.h  string.h  sync.h  time.h  ttyent.h  tzfile.h  unistd.h  values.h  wchar.h
lib/: Makefile
libdata/: Makefile  Makefile.inc
libexec/: Makefile
old/: Makefile
sbin/: Makefile
sco/: Makefile  Makefile.inc  filemap  sco.1  sco.c
share/: Makefile
usr.bin/: Makefile
usr.sbin/: Makefile
(+9357 files in other folders)
